vlib/v/parser/tests/fn_decl_return_type_err_b.vv
struct Foo{}

fn maker() (mut Foo) {
	inner := &Foo{}
	return *inner
}

fn main() {
}
